--- a/ExtraGraphics/ExtraGraphics.csproj
+++ b/ExtraGraphics/ExtraGraphics.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{29B2ACB5-8F35-442D-8AD1-3AB0436C2B1F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ExtraGraphics</RootNamespace>
     <AssemblyName>ExtraGraphics</AssemblyName>
@@ -53,7 +53,6 @@
     <Compile Include="Points\IPoint.cs" />
     <Compile Include="Points\Point3D.cs" />
     <Compile Include="Points\Point2D.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\Ellipse.cs" />
     <Compile Include="Shapes\IShape.cs" />
