--- a/ExtraGraphics/ExtraGraphics.csproj
+++ b/ExtraGraphics/ExtraGraphics.csproj
@@ -47,15 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoundingBoxes\IBoundingBox3D.cs" />
-    <Compile Include="BoundingBoxes\IBoundingBox2D.cs" />
-    <Compile Include="BoundingBoxes\EllipseBox.cs" />
-    <Compile Include="Points\IPoint.cs" />
+    <Compile Include="BoundingBoxes\BoundingBox3D.cs" />
+    <Compile Include="BoundingBoxes\BoundingBox2D.cs" />
     <Compile Include="Points\Point3D.cs" />
     <Compile Include="Points\Point2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\Ellipse.cs" />
-    <Compile Include="Shapes\IShape.cs" />
+    <Compile Include="Shapes\IShape3D.cs" />
+    <Compile Include="Shapes\IShape2D.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,9 +74,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
